--- a/JOURNAL/2017/20170816_0000.md
+++ b/JOURNAL/2017/20170816_0000.md
@@ -1,5 +1,5 @@
 
-## 2017-08-16
+## 2017-08-16 [ThanasisN]
 
 [//]: # (Keywords: #chp1, #tracker2, #async, #data_loss, #katastroph, #panic, #suspicious_data )
 
