--- a/JOURNAL/2022/20220221_1350.md
+++ b/JOURNAL/2022/20220221_1350.md
@@ -1,9 +1,7 @@
 
 ## 2022-02-21 13:50 [ThanasisN]
 
-[//]: # (Keywords: #cm21, #inclined)
-
-The inclined CM-21 was leveled, for comparison to the horizontal one, before calibration of the horizontal.
+[//]: # (Keywords: #cm21, #inclined, #chp1)
 
 We consider after 
 
@@ -12,4 +10,6 @@ We consider after
 the inclined CM-21 to have been set to horizontal position.
 
 This is reflected on the measurements.
+
+There are photos.
 
