--- a/JOURNAL/2023/20230626_1126.md
+++ b/JOURNAL/2023/20230626_1126.md
@@ -1,7 +1,7 @@
 
 ## 2023-06-26 11:26 [ThanasisN]
 
-[//]: # (Keywords: #CHP-1)
+[//]: # (Keywords: #chp1)
 
 CHP-1 was cleaned from spider webs, in frond off the instrument window at
 
