--- a/JOURNAL/2017/20170816_0000.md
+++ b/JOURNAL/2017/20170816_0000.md
@@ -3,7 +3,7 @@
 
 [//]: # (Keywords: #chp1, #tracker2, #async, #data_loss, #katastroph, #panic, #suspicious_data )
 
-#### Tracker found to be on park location.
+**Tracker found to be on park location.**
 
 Seems like software was freeze.
 
@@ -12,7 +12,7 @@ Radmon-pc was rebooted -> tracker working properly.
 Sighting seems correct.
 
 
-#### All BB instruments have bad data!!!!!
+**All BB instruments have bad data!!!!!**
 
 Seems like a step of values before and after reboot!!!
 
