--- a/JOURNAL/2017/20171030_0923.md
+++ b/JOURNAL/2017/20171030_0923.md
@@ -3,13 +3,13 @@
 
 [//]: # (Keywords: #error, #problem, #data_corruption_certain) 
 
-#### Description
+**Description**
 
 Noise on all broadbands
 
 CHP-1 tracker was stack due to radmon
 
-#### Actions
+**Actions**
 
 Reboot was done.
 
