--- a/JOURNAL/2018/20181207_0000.md
+++ b/JOURNAL/2018/20181207_0000.md
@@ -3,14 +3,14 @@
 
 [//]: # (Keywords: #katastroph, #leveling, #silica, #down_time)
 
-#### radmon was down
+**Radmon was down**
 
-radmon had a disk corruption and was down for few days.
+Radmon had a disk corruption and was down for few days.
 
 The system probably is in good order now.
 
 
-#### For CHP-1 was performed
+**For CHP-1 was performed**
 
 - Leveling
 - Silica gel replacement
