--- a/.databasestats.md
+++ b/.databasestats.md
@@ -1,17 +1,11 @@
 
-------------------------------------------------
-Name                     Rows   Vars        Size
------------------- ---------- ------ -----------
-BBDB                 16230240     80     3.1 GiB
 
-BBDB meta               11272     82     3.3 MiB
-
-TrackerDB             7569150     23   146.5 MiB
-
-TrackerDB meta           2780      9   172.0 KiB
-
-Raw files hashes       413727      4     4.4 MiB
-
-**Total**            24227169    198     3.2 GiB
-------------------------------------------------
+| Name             |     Rows | Vars |      Size |
+|:-----------------|---------:|-----:|----------:|
+| BBDB             | 16230240 |   80 |   3.1 GiB |
+| BBDB meta        |    11272 |   82 |   3.3 MiB |
+| TrackerDB        |  7569150 |   23 | 146.5 MiB |
+| TrackerDB meta   |     2780 |    9 | 172.0 KiB |
+| Raw files hashes |   413727 |    4 |   4.4 MiB |
+| **Total**        | 24227169 |  198 |   3.2 GiB |
 
