--- a/.about.md
+++ b/.about.md
@@ -18,5 +18,5 @@ Latest plots and reports should be here: [thanasisn.netlify.app/3-data_display](
 <!--te-->
 
 
-## Data overview
+## Data status overview
 
