--- a/.details.md
+++ b/.details.md
@@ -58,7 +58,8 @@
 ## TODO
 
 - Replace and compare processes from "CM_21_GLB"
-  - Some of the first stages have been replaced
+  - All the major stages have been replaced
+  - Secondary processes are to be ported
 - Process more instruments
 - Interactive plot of db variables
 - Import libRadtran data
