--- a/.about.md
+++ b/.about.md
@@ -5,7 +5,7 @@ Developed in the Laboratory of Atmospheric Physics of Thessaloniki, Greece.
 
 To process the data from broadband instruments of LAP.
 
-This is partial used as operational procedures ([github.com/thanasisn/CM_21_GLB](https://github.com/thanasisn/CM_21_GLB) and [github.com/thanasisn/CS_id](https://github.com/thanasisn/CS_id) are still in use).
+This is partial used in operational procedures ([github.com/thanasisn/CS_id](https://github.com/thanasisn/CS_id) is still in use).
 
 Latest plots and reports should be here: [thanasisn.netlify.app/3-data_display](https://thanasisn.netlify.app/3-data_display)
 
