--- a/JOURNAL/2023/2023-11-07_1100.md
+++ b/JOURNAL/2023/2023-11-07_1100.md
@@ -1,7 +1,8 @@
+---
+tags:      [ chp1 problem ]
+---
 
 ## 2023-11-07 11:00 [ThanasisN]
-
-[//]: # (Keywords: #chp1, #problem)
 
 The CHP-1 was removed to fix a problem with the silica gel compartment.
 
