--- a/JOURNAL/2024/2024-01-26_0000.md
+++ b/JOURNAL/2024/2024-01-26_0000.md
@@ -12,5 +12,5 @@ with a message that prevent it to run normally.
 
 After the message was cleared, it start operation.
 
-Probably was frozen fro yesterday.
+Probably was frozen from yesterday.
 
