--- a/JOURNAL/2023/2023-11-06_1230.md
+++ b/JOURNAL/2023/2023-11-06_1230.md
@@ -1,7 +1,8 @@
+---
+tags:      [ chp1 tracker ]
+---
 
 ## 2023-11-06 12:30 [ThanasisN]
-
-[//]: # (Keywords: #chp1, #tracker)
 
 Tracker was installed, measurement have started!
 
