--- a/JOURNAL/2023/2023-03-28_1548.md
+++ b/JOURNAL/2023/2023-03-28_1548.md
@@ -1,7 +1,7 @@
-
+---
+tags: [ cm21 ]
+---
 ## 2023-03-28 15:48 [ThanasisN]
-
-[//]: # (Keywords: #cm21)
 
 We removed some Global radiation data output constrains.
 
