--- a/JOURNAL/2023/2023-03-28_1731.md
+++ b/JOURNAL/2023/2023-03-28_1731.md
@@ -1,7 +1,7 @@
-
+---
+tags: [ cm21 ]
+---
 ## 2023-03-28 17:31 [ThanasisN]
-
-[//]: # (Keywords: #cm21)
 
 Sirena TOT files updated for 2006-2022.
 
