--- a/JOURNAL/2023/2023-04-19_0919.md
+++ b/JOURNAL/2023/2023-04-19_0919.md
@@ -1,7 +1,8 @@
+---
+tags: [ tracker chp1 data_loss ]
+---
 
 ## 2023-04-19 09:19 [ThanasisN]
-
-[//]: # (Keywords: #tracker, #chp1, #data_loss)
 
 The tracker didn't start normally today.
 
