--- a/JOURNAL/2023/2023-05-18_0915.md
+++ b/JOURNAL/2023/2023-05-18_0915.md
@@ -1,7 +1,8 @@
+---
+tags: [ cleaning broadband brewers ]
+---
 
 ## 2023-05-18 09:15 [ThanasisN]
-
-[//]: # (Keywords: #cleaning, #broadband, #brewers)
 
 Cleaned broadband and brewers instruments at
 
