--- a/JOURNAL/2023/2023-05-25_0852.md
+++ b/JOURNAL/2023/2023-05-25_0852.md
@@ -1,7 +1,8 @@
+---
+tags: [ chp1 ]
+---
 
 ## 2023-05-25 08:52 [ThanasisN]
-
-[//]: # (Keywords: #chp1)
 
 Clean spider web from inside of CHP-1 sun shader at
 
