--- a/JOURNAL/2023/2023-10-25_0922.md
+++ b/JOURNAL/2023/2023-10-25_0922.md
@@ -1,7 +1,8 @@
+---
+tags: [ tracker chp1 problem ]
+---
 
 ## 2023-10-25 09:22 [ThanasisN]
-
-[//]: # (Keywords: #tracker, #chp1, #problem)
 
 Tracker is not tracking from yesterday.
 
