--- a/JOURNAL/2023/2023-10-26_1120.md
+++ b/JOURNAL/2023/2023-10-26_1120.md
@@ -1,9 +1,12 @@
+---
+tags: [ problem tracker chp1 ]
+---
 
 ## 2023-10-26 11:20 [ThanasisN]
 
-[//]: # (Keywords: #key_1, #key_2)
-
 We replaced 2 failed capacitors.
+
 Re install the board.
+
 But still there is no communication with the tracker
 
