--- a/JOURNAL/2023/2023-10-31_0959.md
+++ b/JOURNAL/2023/2023-10-31_0959.md
@@ -1,7 +1,8 @@
+---
+tags: [ chp1 tracker problem ]
+---
 
 ## 2023-10-31 09:59 [ThanasisN]
-
-[//]: # (Keywords: #chp1, #tracker, #problem)
 
 Transistor was replaced,
 
