--- a/JOURNAL/2023/2023-11-02_1113.md
+++ b/JOURNAL/2023/2023-11-02_1113.md
@@ -1,8 +1,10 @@
+---
+tags: [ tracker chp1 problem ]
+---
 
 ## 2023-11-02 11:13 [ThanasisN]
-
-[//]: # (Keywords: #tracker, #chp1, #problem)
 
 Tracker is still down.
 
 Send for service.
+
