--- a/JOURNAL/2023/2023-04-04_1259.md
+++ b/JOURNAL/2023/2023-04-04_1259.md
@@ -1,7 +1,8 @@
+---
+tags: [ chp1 tracker ]
+---
 
 ## 2023-04-04 12:59 [ThanasisN]
-
-[//]: # (Keywords: #chp1, #tracker)
 
 The tracker didn't start at the morning due to an error of the `com port`.
 
