--- a/JOURNAL/2023/2023-06-26_1126.md
+++ b/JOURNAL/2023/2023-06-26_1126.md
@@ -1,7 +1,8 @@
+---
+tags: [ chp1 ]
+---
 
 ## 2023-06-26 11:26 [ThanasisN]
-
-[//]: # (Keywords: #chp1)
 
 CHP-1 was cleaned from spider webs, in frond off the instrument window at
 
