--- a/JOURNAL/2023/2023-10-30_1354.md
+++ b/JOURNAL/2023/2023-10-30_1354.md
@@ -1,9 +1,12 @@
+---
+tags: [ tracker chp1 problem ]
+---
 
 ## 2023-10-30 13:54 [ThanasisN]
 
-[//]: # (Keywords: #tracker, #chp1, #problem)
-
 CHP-1 tracker still not working.
+
 Possible a faulty transistor.
+
 Will replace tomorrow.
 
