--- a/JOURNAL/2022/20220217_0000.md
+++ b/JOURNAL/2022/20220217_0000.md
@@ -1,7 +1,8 @@
+---
+tags: [ chp1 works broadband ccd ]
+---
 
 ## 2022-02-17 00:00 [ThanasisN]
-
-[//]: # (Keywords: #chp1, #works, #broadband, #ccd)
 
 Broadband instruments were installed? after they have been removed from the instruments tables.
 
