--- a/JOURNAL/2022/2022-02-21_1350.md
+++ b/JOURNAL/2022/2022-02-21_1350.md
@@ -1,9 +1,10 @@
+---
+tags: [ cm21 inclined chp1 ]
+---
 
 ## 2022-02-21 13:50 [ThanasisN]
 
-[//]: # (Keywords: #cm21, #inclined, #chp1)
-
-We consider after 
+We consider that after
 
 ~ 11:50 UTC
 
