--- a/JOURNAL/2022/2022-05-23_0000.md
+++ b/JOURNAL/2022/2022-05-23_0000.md
@@ -1,9 +1,10 @@
+---
+tags: [ cm21 ]
+---
 
 ## 2022-05-23 [ThanasisN]
 
-[//]: # (Keywords: #cm21)
-
-Installation of horizontal CM-21
+Installation of the horizontal CM-21
 
  ~ 07:55 - 08:17 UTC
 
