--- a/JOURNAL/2023/2023-04-03_0914.md
+++ b/JOURNAL/2023/2023-04-03_0914.md
@@ -3,7 +3,7 @@ tags: [  problem radmon ]
 ---
 ## 2023-04-03 09:14 [ThanasisN]
 
-Radmon found frizzed with different system errors.
+Radmon found frozen with different system errors.
 
 No tracking with CHP-1 at start of the day. Day is cloudy.
 
