--- a/JOURNAL/2019/2019-06-12_1054.md
+++ b/JOURNAL/2019/2019-06-12_1054.md
@@ -1,7 +1,8 @@
+---
+tags: [ test data_loss ]
+---
 
 ## 2019-06-12 10:54 [ThanasisN]
-
-[//]: # (Keywords: #test, #data_loss)
 
 Testing azimuth measurements with zero elevation
 
