--- a/JOURNAL/2019/2019-06-27_0833.md
+++ b/JOURNAL/2019/2019-06-27_0833.md
@@ -1,7 +1,8 @@
+---
+tags: [ cleaning cm21 chp1 ]
+---
 
 ## 2019-06-27 08:33 [ThanasisN]
-
-[//]: # (Keywords: #cleaning)
 
 Clean CHP-1 and CM-21 only at
 
