--- a/JOURNAL/2019/2019-07-04_0000.md
+++ b/JOURNAL/2019/2019-07-04_0000.md
@@ -1,7 +1,8 @@
+---
+tags: [ chp1 data_loss leveling sighting silica ]
+---
 
 ## 2019-07-04 [ThanasisN]
-
-[//]: # (Keywords: #chp1, #data_loss)
 
 After painting of the platforms,
 last ~two days the CHP-1 instrument,
