--- a/JOURNAL/2019/2019-07-26_0859.md
+++ b/JOURNAL/2019/2019-07-26_0859.md
@@ -1,11 +1,12 @@
+---
+tags: [ cleaning ]
+---
 
 ## 2019-07-26 08:59 [ThanasisN]
 
-[//]: # (Keywords: #cleaning)
-
 Cleaning all domes
 
-08:59 - 09:03 Local time
+08:59 - 09:03 LT
 
 05:59 - 06:03 UTC
 
