--- a/JOURNAL/2019/2019-12-16_1100.md
+++ b/JOURNAL/2019/2019-12-16_1100.md
@@ -1,7 +1,8 @@
+---
+tags: [ data_loss error radmon ]
+---
 
 ## 2019-12-16 11:00 [ThanasisN]
-
-[//]: # (Keywords: #data_loss, #error)
 
 Power out for some minutes at
 
