--- a/JOURNAL/2018/2018-01-18_0000.md
+++ b/JOURNAL/2018/2018-01-18_0000.md
@@ -1,7 +1,8 @@
+---
+tags: [ chp1 data_loss down_time suspicious_data radmon ]
+---
 
 ## 2018-01-18 [ThanasisN]
-
-[//]: # (Keywords: #chp1, #data_loss, #down_time, #suspicious_data)
 
 Early morning no main power
 
