--- a/JOURNAL/2018/2018-03-20_0000.md
+++ b/JOURNAL/2018/2018-03-20_0000.md
@@ -1,7 +1,8 @@
+---
+tags: [ cleaning suspicious_data chp1 ]
+---
 
 ## 2018-03-20 [ThanasisN]
-
-[//]: # (Keywords: #cleaning, #suspicious_data, #chp1)
 
 Visible signal step after cleaning!
 On CHP-1.
