--- a/JOURNAL/2018/2018-05-16_1035.md
+++ b/JOURNAL/2018/2018-05-16_1035.md
@@ -1,8 +1,8 @@
+---
+tags: [ leveling chp1 ]
+---
 
 ## 2018-05-16 10:35 [ThanasisN]
-
-[//]: # (Keywords: #leveling, #chp1)
-
 
 Leveling of CHP-1
 
