--- a/JOURNAL/2018/2018-05-18_0000.md
+++ b/JOURNAL/2018/2018-05-18_0000.md
@@ -1,7 +1,8 @@
+---
+tags: [ data_corruption_certain chp1 ]
+---
 
 ## 2018-05-18 [ThanasisN]
-
-[//]: # (Keywords: #data_corruption_certain)
 
 While sighting, I did an accidental reset to zero offset.
 
