--- a/JOURNAL/2018/2018-12-07_0000.md
+++ b/JOURNAL/2018/2018-12-07_0000.md
@@ -1,7 +1,8 @@
+---
+tags: [ problem leveling silica down_time chp1 sighting radmon ]
+---
 
 ## 2018-12-07 [ThanasisN]
-
-[//]: # (Keywords: #katastroph, #leveling, #silica, #down_time)
 
 **Radmon was down**
 
@@ -18,7 +19,7 @@ The system probably is in good order now.
 
 Was completed at 
 
-10:56 local time 
+10:56 LT
 
-8:56 UTC
+08:56 UTC
 
