--- a/JOURNAL/2018/2018-03-23_1136.md
+++ b/JOURNAL/2018/2018-03-23_1136.md
@@ -1,7 +1,8 @@
+---
+tags: [ cleaning suspicious_data ]
+---
 
 ## 2018-03-23 11:36 [ThanasisN]
-
-[//]: # (Keywords: #cleaning, #suspicious_data)
 
 From previous days until now,
 rain with a lot of dust is occurring.
@@ -10,7 +11,7 @@ Instruments domes are regular covered with thick dust.
 
 Dome Cleaning
 
-11:36 - 11:39 local time
+11:36 - 11:39 LT
 
 09:36 - 09:39 UTC
 
