--- a/JOURNAL/2017/2017-01-10_0000.md
+++ b/JOURNAL/2017/2017-01-10_0000.md
@@ -1,7 +1,8 @@
+---
+tags: [ chp1 cm21 data_loss ]
+---
 
 ## 2017-01-10 [ThanasisN]
-
-[//]: # (Keywords: #chp1, #cm21)
 
 Snowfall, instruments probably covered by the snow.
 
