--- a/JOURNAL/2017/2017-12-26_0000.md
+++ b/JOURNAL/2017/2017-12-26_0000.md
@@ -1,7 +1,8 @@
+---
+tags: [ data_loss suspicious_data chp1 ]
+---
 
 ## 2017-12-26 [ThanasisN]
-
-[//]: # (Keywords: #data_loss, #suspicious_data, #chp1)
 
 Tracker start working by itself probably!
 
