--- a/JOURNAL/2017/2017-12-25_0000.md
+++ b/JOURNAL/2017/2017-12-25_0000.md
@@ -1,7 +1,8 @@
+---
+tags: [ chp1 data_loss suspicious_data ]
+---
 
 ## 2017-12-25 [ThanasisN]
-
-[//]: # (Keywords: #chp1, #data_loss, #suspicious_data)
 
 Async and step data shows that tracker is not working.
 
