--- a/.details.md
+++ b/.details.md
@@ -57,13 +57,14 @@
 
 ## TODO
 
+- Fully port all to duckdb
 - Replace and compare processes from "CM_21_GLB"
   - All the major stages have been replaced
   - Secondary processes are to be ported
 - Process more instruments
-- Interactive plot of db variables
 - Import libRadtran data
 - May import CSid
+- Import other references
 
 ----------------------
 
@@ -74,6 +75,8 @@
 Some aspects on the implementation of this project.
 
 - We use a dataset of `parquet` files as a database for all measurements and additional data.
+- We are migrating the original parquet dataset scheme to `Duckdb` to improve overall
+  efficiency.
 - The `parquet` dataset use one file for each month, this facilitates:
   - Syncing of the data between different computers.
   - Partial processing when needed without using the dataset function.
