--- a/.details.md
+++ b/.details.md
@@ -45,6 +45,8 @@
 - Clear sky identification (CSid)
   - Flags data as affected by clouds or not with the algorithm of M. J. Reno and C.
     W. Hansen (2016)
+- Investigate long-term trends
+  - Process similar to A. Natsis, A. Bais and C. Meleti (2023)
 - Creates TSI data used in analysis
 - Imports atmospheric pressure data from proxies
 - Keeps an `md5sum` of all input files to check for bit rot and other data corruption.
