--- a/.details.md
+++ b/.details.md
@@ -35,21 +35,39 @@
 
 ### For CHP-1 tracker
 
- - Digest async and step files for later analysis 
+ - Digest async and step files for later analysis
 
 
 ### Other processes
 
-- Quality Check of radiation data (QCRad)   
+- Quality Check of radiation data (QCRad)
   - Flags data using mainly the algorithm of C. N. Long and Y. Shi (2006)
 - Clear sky identification (CSid)
   - Flags data as affected by clouds or not with the algorithm of M. J. Reno and C.
     W. Hansen (2016)
-- Investigate long-term trends
+- Investigate long-term trends (Work in progress)
   - Process similar to A. Natsis, A. Bais and C. Meleti (2023)
 - Creates TSI data used in analysis
 - Imports atmospheric pressure data from proxies
 - Keeps an `md5sum` of all input files to check for bit rot and other data corruption.
+
+### For EPPLEY-IR
+
+- Digest raw data
+  - Signal from EPPLEY-IR
+
+
+### For Inclined CM-21
+
+- Digest raw data
+  - Signal from an Inclined CHP-1
+
+
+### For TOT
+
+- Parse Global radiation data prepared with an external and independent process
+  - Read *.TOT files
+  - Do some plots and comparisons
 
 
 ### Tools
