--- a/.details.md
+++ b/.details.md
@@ -46,7 +46,7 @@
   - Flags data as affected by clouds or not with the algorithm of M. J. Reno and C.
     W. Hansen (2016)
 - Investigate long-term trends (Work in progress)
-  - Process similar to A. Natsis, A. Bais and C. Meleti (2023)
+  - Process similar to [A. Natsis, A. Bais and C. Meleti (2023)](https://www.mdpi.com/2076-3417/14/1/252)
 - Creates TSI data used in analysis
 - Imports atmospheric pressure data from proxies
 - Keeps an `md5sum` of all input files to check for bit rot and other data corruption.
@@ -74,8 +74,8 @@
 
 - `inspect_days_duckdb.R`  interactive plot of some data in the duckdb
 - `inspect_days_DB.R`  interactive plot of some data in the DB
-- `inspect_days_Lap.R` interactive plot of some data from source files 
-- `inspect_days_Lap_sirena.R` interactive plot of some data from source files 
+- `inspect_days_Lap.R` interactive plot of some data from source files
+- `inspect_days_Lap_sirena.R` interactive plot of some data from source files
 
 
 ## TODO
@@ -115,10 +115,16 @@ There is no centralized documentation for the project. Although you can refer to
 - Summary notes on the start of each script
 - Comments inside each script
 - Compiled reports from each script
+- Follow the sequence of the scripts in 'execution' folder
 
 
 ## Reproducibility
 
 - We use the `renv` R package to keep track of the projects dependencies.
 - Maybe will use a `nix-shell` environment as a more robust and portable method.
+
+
+## Journal
+
+Contains parts of the logbook of the instruments maintenance and other notes.
 
